maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: not found: value gety
    if (gety()==0) {northfound==true}
        ^Escaper:7: error: not found: value get
    if (get())
        ^